<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">

<TextView
    android:text="@string/msgLogin"
    android:textSize="30sp"
    android:textAlignment="center"
    android:layout_gravity="center"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:layout_marginLeft="70dp"
    android:layout_marginRight="70dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

<EditText
    android:id="@+id/edtCorreo"
    android:hint="@string/hCorreo"
    android:layout_marginBottom="25dp"
    android:layout_marginLeft="70dp"
    android:layout_marginRight="70dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

<EditText
    android:id="@+id/edtPass"
    android:hint="@string/hPass"
    android:layout_marginBottom="25dp"
    android:layout_marginLeft="70dp"
    android:layout_marginRight="70dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/btnIniciar" />

    <TextView
        android:text="@string/infoBoton"
        android:textSize="10sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="110dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDatos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:onClick="OnClickDatos"
        android:text="@string/btnDatos" />

</LinearLayout>