<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Barra">

    <TextView
        android:text="@string/msgFruta"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/actFruta"
        android:hint="@string/hFruta"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/msgAnimal"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/actAnimal"
        android:hint="@string/hAnimal"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/msgLenguaje"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/actLenguaje"
        android:hint="@string/hLenguaje"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/proBar"
        android:progress="0"
        android:max="100"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/porcentaje"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnProcesarInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:onClick="OnClickProcesar"
        android:text="@string/btnProcesar" />

    <TextView
        android:id="@+id/nam"
        android:textSize="19sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>